<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Yuome</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Passwort</string>
    <string name="title_activity_sign_up">Registrieren</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_create_community">Freundeskreis registrieren</string>
    <string name="community_name">Name der Gruppe</string>
    <string name="title_activity_first">Loslegen</string>
    <string name="create">erstellen</string>
    <string name="name">Name</string>
    <string name="repeat_password">Passwort wiederholen</string>
    <string name="signup">registrieren</string>
    <string name="join">Hinzutreten</string>
    <string name="title_activity_join">WG beitreten</string>
    <string name="title_activity_join_community">JoinCommunityActivity</string>
    <string name="title_activity_splashscreen">Yuome</string>
    <string name="title_activity_my_debts">Schuldenübersicht</string>
    <string name="title_activity_scan_receipt">Kassenzettel fotografieren</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_my_receipts">Meine Kassenzettel</string>
    <string-array name="main_menu">
        <item>Kassenzettel scannen</item>
        <item>Meine Übersicht</item>
        <item>Meine Kassenzettel</item>
        <item>Mein Konto</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string-array name="settings_menu">
        <item>Username ändern</item>
        <item>Passwort ändern</item>
        <item>Abmelden</item>
        <item>Konto löschen</item>
    </string-array>

</resources>
