<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".SignUpActivity$PlaceholderFragment">

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:hint="@string/name"
        android:id="@+id/username"/>

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_below="@+id/username"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:id="@+id/password"/>

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:hint="@string/repeat_password"
        android:id="@+id/repeat_password"
        android:inputType="textPassword"
        android:layout_below="@+id/password"/>

    <Button
        android:id="@+id/sign_up_button"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_below="@+id/repeat_password"
        android:text="@string/signup"/>

</RelativeLayout>
