<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".CreateCommunityActivity">

    <EditText
        android:text=""
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/community_name"
        android:id="@+id/community_name"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/community_name"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:id="@+id/community_password"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@+id/community_password"
        android:text="@string/create"
        android:id="@+id/create_community"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/http_response"
        android:layout_below="@+id/create_community"
        android:text=""/>

</RelativeLayout>
